[package]
name = "protondb-scanner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3.*" }
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"

[dev-dependencies]
mockito = "0.30.0"